maze.lessons.maze.island.IslandMaze.scala.error
Escaper:23: error: illegal start of simple expression
        if(!estFaceMur(){avance();gauche()})}
                                            ^